--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,10 @@ assetic:
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
+        less:
+            node: /usr/local/bin/node
+            node_paths: [/usr/local/lib/node_modules]
+            apply_to: "\.less$"
         cssrewrite: ~
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
@@ -64,3 +68,7 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+# Bootstrap Configuration
+braincrafted_bootstrap:
+    less_filter: less
