--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
+        "twbs/bootstrap": "3.0.*",
         "braincrafted/bootstrap-bundle": "~2.0@alpha",
-        "twbs/bootstrap": "3.0.*"
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
