--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,9 +1,14 @@
 _argon_web:
     resource: "@ArgonWebBundle/Resources/config/routing/pages.xml"
+    prefix: /
 
 _argon_web_admin:
     resource: "@ArgonWebBundle/Resources/config/routing/admin.xml"
     prefix: /admin
+
+_argon_game_character:
+    resource: "@ArgonGameBundle/Resources/config/routing/character.xml"
+    prefix: /
 
 _argon_game_admin:
     resource: "@ArgonGameBundle/Resources/config/routing/admin.xml"
