--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sensio/framework-extra-bundle": "~2.3",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
+        "lunetics/locale-bundle": "~2.2@dev",
         "twbs/bootstrap": "~3.1",
         "braincrafted/bootstrap-bundle": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev"
