--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,6 +93,7 @@ stof_doctrine_extensions:
     default_locale: "%locale%"
     orm:
         default:
+            sluggable:      true
             translatable:   true
             tree:           true
 
