--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,7 +16,7 @@ framework:
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: false }
+    validation:      { enabled: true, enable_annotations: false }
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
