--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,18 +38,18 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
-    #java: /usr/bin/java
+    bundles:        []
+    java:           "/usr/bin/java"
     filters:
         less:
-            node: /usr/bin/node
+            node:       "/usr/bin/node"
             node_paths: [/usr/lib/node_modules]
-            apply_to: "\\.less$"
+            apply_to:   "\\.less$"
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        closure:
+            jar: "%kernel.root_dir%/../vendor/google/closure-compiler/compiler.jar"
+        yui_css:
+            jar: "%kernel.root_dir%/../vendor/yahoo/yuicompressor/yuicompressor-2.4.8.jar"
 
 # Doctrine Configuration
 doctrine:
