--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,7 +24,7 @@ framework:
     trusted_proxies: ~
     session:         ~
     fragments:       ~
-    http_method_override: true
+    http_method_override: false
 
 # Twig Configuration
 twig:
