--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,17 @@
         {
             "type": "package",
             "package": {
+                "name": "jquery/jqueryui",
+                "version": "1.10.4",
+                "dist": {
+                    "url": "http://jqueryui.com/resources/download/jquery-ui-1.10.4.zip",
+                    "type": "zip"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
                 "name": "google/closure-compiler",
                 "version": "20140110",
                 "dist": {
@@ -61,6 +72,7 @@
         "lunetics/locale-bundle": "~2.2",
         "twbs/bootstrap": "~3.1",
         "jquery/jquery": "~1.10",
+        "jquery/jqueryui": "~1.10",
         "braincrafted/bootstrap-bundle": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev"
     },
