--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,6 +100,7 @@ stof_doctrine_extensions:
             sluggable:      true
             translatable:   true
             tree:           true
+            timestampable:  true
 
 # Locale Configuration
 lunetics_locale:
