--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
             "type": "package",
             "package": {
                 "name": "google/closure-compiler",
-                "version": "20140110",
+                "version": "dev-master",
                 "dist": {
-                    "url": "http://dl.google.com/closure-compiler/compiler-20140110.zip",
+                    "url": "http://dl.google.com/closure-compiler/compiler-latest.zip",
                     "type": "zip"
                 }
             }
@@ -60,7 +60,7 @@
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "stof/doctrine-extensions-bundle": "~1.1",
         "twig/extensions": "~1.0",
-        "google/closure-compiler": "20140110",
+        "google/closure-compiler": "dev-master",
         "yahoo/yuicompressor": "~2.4",
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
