--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,8 @@
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "doctrine/doctrine-fixtures-bundle": "~2.2",
+        "doctrine/migrations": "~1.0@dev",
+        "doctrine/doctrine-migrations-bundle": "~2.1@dev",
         "stof/doctrine-extensions-bundle": "~1.1",
         "twig/extensions": "~1.0",
         "google/closure-compiler": "dev-master",
