[Design] Add variables.less

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,8 +118,8 @@ braincrafted_bootstrap:
     auto_configure:
         knp_menu: false
         knp_paginator: false
-    #customize:
-    #    variables_file: "%kernel.root_dir%/Resources/less/variables.less"
+    customize:
+        variables_file: "%kernel.root_dir%/Resources/less/variables.less"
     less_filter: less
 
 # FOSUser Configuration
