--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,6 +35,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/event, roles: ROLE_DIRECTOR }
+        - { path: ^/inbox, roles: ROLE_CHARACTER }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
