[Message] New Thread Recipent

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -137,3 +137,5 @@ fos_message:
     db_driver:     orm
     thread_class:  Argon\MessageBundle\Entity\Thread
     message_class: Argon\MessageBundle\Entity\Message
+    new_thread_form:
+        type: argon_message.form.new_thread
