--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,7 +38,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        []
+    bundles:        ['ArgonGameBundle']
     java:           "/usr/bin/java"
     filters:
         less:
