Update Doctrine and other minor versions

--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "~2.4",
-        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/orm": "~2.4",
         "doctrine/doctrine-bundle": "~1.2",
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "doctrine/migrations": "~1.0@dev",
@@ -64,19 +64,19 @@
         "twig/extensions": "~1.0",
         "google/closure-compiler": "dev-master",
         "yahoo/yuicompressor": "~2.4",
-        "symfony/assetic-bundle": "~2.3",
+        "symfony/assetic-bundle": "~2.5",
         "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
+        "symfony/monolog-bundle": "~2.6",
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~2.3",
-        "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "sensio/generator-bundle": "~2.4",
+        "incenteev/composer-parameter-handler": "~2.1",
         "knplabs/knp-paginator-bundle": "~2.4",
-        "lunetics/locale-bundle": "~2.2",
-        "twbs/bootstrap": "~3.1",
+        "lunetics/locale-bundle": "~2.3",
+        "twbs/bootstrap": "~3.3",
         "jquery/jquery": "~1.11",
         "jquery/jqueryui": "~1.11",
-        "braincrafted/bootstrap-bundle": "~2.0",
+        "braincrafted/bootstrap-bundle": "~2.1",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "friendsofsymfony/message-bundle": "~1.2"
     },
