--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,10 +1,11 @@
 parameters:
-    database_driver:   pdo_mysql
-    database_path:     ~
-    database_host:     127.0.0.1
+    database_driver:   pdo_sqlite
+    database_path:     %kernel.root_dir%/data/argonbook.db
+    database_memory:   ~
+    database_host:     ~
     database_port:     ~
-    database_name:     symfony
-    database_user:     root
+    database_name:     ~
+    database_user:     ~
     database_password: ~
 
     mailer_transport:  smtp
@@ -14,3 +15,4 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
