--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "description": "Alternate Reality Games Oriented Network",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-0": { "Argon": "src/" }
     },
     "repositories": [
         {
