--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
             "type": "package",
             "package": {
                 "name": "jquery/jquery",
-                "version": "1.11.1",
+                "version": "1.11.3",
                 "dist": {
-                    "url": "http://code.jquery.com/jquery-1.11.1.js",
+                    "url": "http://code.jquery.com/jquery-1.11.3.min.js",
                     "type": "file"
                 }
             }
@@ -22,9 +22,9 @@
             "type": "package",
             "package": {
                 "name": "jquery/jqueryui",
-                "version": "1.11.2",
+                "version": "1.11.4",
                 "dist": {
-                    "url": "http://jqueryui.com/resources/download/jquery-ui-1.11.2.zip",
+                    "url": "http://jqueryui.com/resources/download/jquery-ui-1.11.4.zip",
                     "type": "zip"
                 }
             }
