--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
             "type": "package",
             "package": {
                 "name": "google/closure-compiler",
-                "version": "dev-master",
+                "version": "v20151015",
                 "dist": {
-                    "url": "http://dl.google.com/closure-compiler/compiler-latest.zip",
+                    "url": "http://dl.google.com/closure-compiler/compiler-20151015.zip",
                     "type": "zip"
                 }
             }
@@ -62,7 +62,7 @@
         "doctrine/doctrine-migrations-bundle": "~2.1@dev",
         "stof/doctrine-extensions-bundle": "~1.1",
         "twig/extensions": "~1.0",
-        "google/closure-compiler": "dev-master",
+        "google/closure-compiler": "v20151015",
         "yahoo/yuicompressor": "~2.4",
         "kriswallsmith/assetic": "~1.2@dev",
         "symfony/assetic-bundle": "~2.5",
