--- a/composer.json
+++ b/composer.json
@@ -55,12 +55,12 @@
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "~2.6",
-        "doctrine/orm": "~2.4",
-        "doctrine/doctrine-bundle": "~1.2",
-        "doctrine/doctrine-fixtures-bundle": "~2.2",
-        "doctrine/migrations": "~1.0@dev",
-        "doctrine/doctrine-migrations-bundle": "~2.1@dev",
-        "stof/doctrine-extensions-bundle": "~1.1",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "doctrine/migrations": "^1.1",
+        "doctrine/doctrine-migrations-bundle": "^1.1",
+        "stof/doctrine-extensions-bundle": "^1.2",
         "twig/extensions": "~1.0",
         "google/closure-compiler": "v20151015",
         "yahoo/yuicompressor": "~2.4",
