--- a/composer.json
+++ b/composer.json
@@ -61,11 +61,11 @@
         "doctrine/migrations": "^1.1",
         "doctrine/doctrine-migrations-bundle": "^1.1",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "twig/extensions": "~1.0",
+        "twig/extensions": "^1.3",
         "google/closure-compiler": "v20151015",
-        "yahoo/yuicompressor": "~2.4",
-        "kriswallsmith/assetic": "~1.2@dev",
-        "symfony/assetic-bundle": "~2.5",
+        "yahoo/yuicompressor": "^2.4",
+        "kriswallsmith/assetic": "^1.3",
+        "symfony/assetic-bundle": "^2.7",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.6",
         "sensio/distribution-bundle": "~2.3",
