--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,8 @@
         "doctrine/migrations": "^1.1",
         "doctrine/doctrine-migrations-bundle": "^1.1",
         "stof/doctrine-extensions-bundle": "^1.2",
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "lunetics/locale-bundle": "^2.4",
         "twig/extensions": "^1.3",
         "google/closure-compiler": "v20151015",
         "yahoo/yuicompressor": "^2.4",
@@ -72,15 +74,13 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0",
         "sensio/generator-bundle": "^3.0",
-        "incenteev/composer-parameter-handler": "~2.1",
-        "knplabs/knp-paginator-bundle": "~2.4",
-        "lunetics/locale-bundle": "~2.3",
-        "twbs/bootstrap": "~3.3",
+        "incenteev/composer-parameter-handler": "^2.1",
         "jquery/jquery": "~1.11",
         "jquery/jqueryui": "~1.11",
-        "braincrafted/bootstrap-bundle": "~2.1",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "friendsofsymfony/message-bundle": "~1.2"
+        "twbs/bootstrap": "^3.3",
+        "braincrafted/bootstrap-bundle": "^2.1",
+        "friendsofsymfony/user-bundle": "^2.0.0-alpha3",
+        "friendsofsymfony/message-bundle": "^1.2"
     },
     "scripts": {
         "post-install-cmd": [
