Use require-dev

--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,6 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0",
-        "sensio/generator-bundle": "^3.0",
         "incenteev/composer-parameter-handler": "^2.1",
         "jquery/jquery": "~1.11",
         "jquery/jqueryui": "~1.11",
@@ -81,6 +80,10 @@
         "braincrafted/bootstrap-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "^2.0.0-alpha3",
         "friendsofsymfony/message-bundle": "^1.2"
+    },
+    "require-dev": {
+        "sensio/generator-bundle": "^3.0",
+        "symfony/debug": "^2.8"
     },
     "scripts": {
         "post-install-cmd": [
