--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,31 +11,29 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "bootstrap.php.cache" >
+    bootstrap                   = "app/autoload.php" >
+
+    <php>
+        <server name="KERNEL_DIR" value="app/" />
+    </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>../src/*/*Bundle/Tests</directory>
-            <directory>../src/*/Bundle/*Bundle/Tests</directory>
+        <testsuite name="ArgonBook Test Suite">
+            <directory>tests/</directory>
+            <directory>src/*/*Bundle/Tests/</directory>
+            <directory>src/*/Bundle/*Bundle/Tests/</directory>
         </testsuite>
     </testsuites>
 
-    <!--
-    <php>
-        <server name="KERNEL_DIR" value="/path/to/your/app/" />
-    </php>
-    -->
-
     <filter>
         <whitelist>
-            <directory>../src</directory>
+            <directory>src/</directory>
             <exclude>
-                <directory>../src/*/*Bundle/Resources</directory>
-                <directory>../src/*/*Bundle/Tests</directory>
-                <directory>../src/*/Bundle/*Bundle/Resources</directory>
-                <directory>../src/*/Bundle/*Bundle/Tests</directory>
+                <directory>src/*/*Bundle/Resources/</directory>
+                <directory>src/*/*Bundle/Tests/</directory>
+                <directory>src/*/Bundle/*Bundle/Resources/</directory>
+                <directory>src/*/Bundle/*Bundle/Tests/</directory>
             </exclude>
         </whitelist>
     </filter>
-
 </phpunit>
