--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,21 +26,5 @@ _argon_news_admin:
 
 #### FOSUserBundle
 
-_fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
-
-_fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
-
-_fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
-
-_fos_user_resetting:
-    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
-
-_fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
+_fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
