FOSUser from_email

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -136,6 +136,9 @@ braincrafted_bootstrap:
 
 # FOSUser Configuration
 fos_user:
-    db_driver:     orm
-    firewall_name: main
-    user_class:    Argon\CommonBundle\Entity\Player
+    db_driver:       orm
+    firewall_name:   main
+    user_class:      Argon\CommonBundle\Entity\Player
+    from_email:
+        address:     no-reply@argonbook.eu
+        sender_name: ArgonBook
