--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -8,24 +8,27 @@ framework:
     profiler: { only_exceptions: false }
 
 web_profiler:
-    toolbar:                true
-    intercept_redirects:    true
+    toolbar: true
+    intercept_redirects: false
 
 monolog:
     handlers:
         main:
-            type:  stream
-            path:  %kernel.logs_dir%/%kernel.environment%.log
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
+            channels: [!event]
+        console:
+            type:   console
+            channels: [!event, !doctrine]
+        # uncomment to get logging in your browser
+        # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
-        #    type:  firephp
-        #    level: info
+        #    type:   firephp
+        #    level:  info
         #chromephp:
-        #    type:  chromephp
-        #    level: info
-
-assetic:
-    use_controller: true
+        #    type:   chromephp
+        #    level:  info
 
 #swiftmailer:
 #    delivery_address: me@example.com
