--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,43 +1,24 @@
+# To get started with security, check out the documentation:
+# http://symfony.com/doc/current/book/security.html
 security:
-    encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
 
-    role_hierarchy:
-        ROLE_CHARACTER:   []
-        ROLE_USER:        [ROLE_ALLOWED_TO_SWITCH_CHARACTER]
-        ROLE_DIRECTOR:    [ROLE_USER]
-        ROLE_ADMIN:       [ROLE_USER, ROLE_DIRECTOR]
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_DIRECTOR, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-
+    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username_email
-        argon_game_character:
-            id: argon_game.security.character_provider
+        in_memory:
+            memory: ~
 
     firewalls:
+        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
         main:
-            pattern:    ^/
-            form_login:
-                provider:      fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
-                # if you are using Symfony < 2.8, use the following config instead:
-                #csrf_provider: form.csrf_provider
-            logout:     ~
-            anonymous:  ~
-            switch_user:
-                provider:      argon_game_character
-                parameter:     _switch
-                role:          ROLE_ALLOWED_TO_SWITCH_CHARACTER
+            anonymous: ~
+            # activate different ways to authenticate
 
-    access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/event, roles: ROLE_DIRECTOR }
-        - { path: ^/inbox, roles: ROLE_CHARACTER }
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+            # http_basic: ~
+            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
+
+            # form_login: ~
+            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
