--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,6 +6,9 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    project:
+        name:        argonbook
+        version:     1.0
     locale: en
 
 framework:
@@ -17,8 +20,8 @@ framework:
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+    validation:      { enable_annotations: false }
+    serializer:      { enable_annotations: false }
     templating:
         engines: ['twig']
     default_locale:  "%locale%"
@@ -36,6 +39,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        project:      "%project%"
 
 # Doctrine Configuration
 doctrine:
