--- a/etc/roles/php/tasks/main.yml
+++ b/etc/roles/php/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: add PHP repository
+- name: add php repository
   apt_repository: repo=ppa:ondrej/php5 update_cache=yes state=present
 
 - name: install php
@@ -15,7 +15,6 @@
 
 - name: conf.d
   file: path=/etc/php5/conf.d mode=0755 state=directory
-  become: yes
 
 - name: configure
   template:
@@ -23,7 +22,7 @@
     dest: /etc/php5/conf.d/90-custom.ini
     mode: 0644
   notify:
-    - restart fastcgi
+    - restart php5-fpm
 
 - name: configuration link
   with_items: [cli, fpm]
