--- a/etc/roles/php/tasks/main.yml
+++ b/etc/roles/php/tasks/main.yml
@@ -10,8 +10,9 @@
     - php5-cli
     - php5-intl
     - php5-sqlite
-    - php5-fpm
+    - php5-mysql
     - php5-curl
+    - php5-fpm
 
 - name: conf.d
   file: path=/etc/php5/conf.d mode=0755 state=directory
